fix build fail